[package]
name = "flip"
version = "0.2.0"
authors = ["flo-l <lacknerflo@gmail.com>"]
build = "build.rs" # LALRPOP preprocessing

[dependencies]
clap = "2"
siphasher = "0.1.2"
rustyline = "1"
itertools = "0.5.4"

# Add a dependency on the LALRPOP runtime library:
[dependencies.lalrpop-util]
version = "0.12.0"

[build-dependencies.lalrpop]
version = "0.12.0"
